# quarantine-trivia

./: .gitignore  Movie Trivia Questions.numbers  Trivia.numbers  add_toc_to_html.py  bonus_questions.txt  compile_trivia.scpt  download_songs.py  environment.yml  general trivia questions 2.csv  general trivia questions.csv  houseplants.tsv  index-docinfo-footer.html  index-docinfo.html  index.asciidoc  index.html  latex_templates.py  music_trivia.asciidoc  music_trivia.html  music_trivia.py  music_trivia_asciidoc.py  natl_parks_table.html  parse_questions.py  previous_ffmpeg.json  pyproject.toml  questions.numbers  questions.txt  questions_final.csv  questions_to_latex.py  songs.tsv  songs_meta_filled.csv  songs_meta_filled2.csv  songs_meta_filled_no_qs_as.csv  songs_meta_pre.csv  trivia.asciidoc  trivia.html  trivia_.asciidoc  trivia_.html  trivia_item.py  week 11 general trivia 2.csv  week 11 general trivia.csv  (+9 more)
Archive/: music_trivia.py
LaTeX/: movie_trivia.synctex(busy)  movie_trivia.tex  music_trivia.py  trivia.tex
Song meta/: Broadway.tsv  General.csv  Movie.csv
Songs Staging/: Originals alias
Songs_meta_filled_output/: Sheet 2-Table 1.csv
TypeScript Test/: data.js  data.ts  prepare_data.py  slide_types.ts  string_template.js  string_template.ts  trivia_slides.html  tsconfig.json  tsconfig.tsbuildinfo  types.js  week 15 general trivia.csv
Week 1 - Trivia game/: parse_questions.py  questions.txt
Week 10 - General Trivia/: latex_templates.py  questions_to_latex.py  week 10 general trivia.csv
Week 12 - General Trivia (Thanksgiving)/: latex_templates.py
(+254 files in other folders)
